# KitsAI

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/includes/Couche/: Couche.cpp  Couche.hpp
src/includes/ReseauNeuronal/: ReseauNeuronal.cpp  ReseauNeuronal.hpp
src/includes/ReseauNeuronal/Couche/: Couche.cpp  Couche.hpp
src/includes/ReseauNeuronal/Neurone/: Neurone.cpp  Neurone.hpp
